cluster cleaning function established

--- a/src/core/cluster.html
+++ b/src/core/cluster.html
@@ -36,6 +36,15 @@
         button:hover {
             background-color: #45a049;
         }
+        /* Neuer Style für Clean-Button */
+        .clean-button {
+            background-color: #ff9800;
+            color: white;
+            font-weight: bold;
+        }
+        .clean-button:hover {
+            background-color: #e68a00;
+        }
         input[type="number"], input[type="text"] {
             width: 60px;
             padding: 5px;
