--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="de"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Text Cluster Comparison</title><link rel="icon" href="favicon.ico"/><style>* {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Text Cluster Comparison</title><link rel="icon" href="favicon.ico"/><style>* {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
@@ -7,4 +7,4 @@
       font-family: Arial, sans-serif;
       line-height: 1.6;
       color: #333;
-    }</style><script defer="defer" src="/text-cluster-comparison-js/bundle.js"></script></head><body><noscript>JavaScript ist für diese Anwendung erforderlich. Bitte aktiviere JavaScript in deinem Browser.</noscript><div id="root"></div></body></html>
+    }</style><script defer="defer" src="/text-cluster-comparison-js/bundle.js"></script></head><body><noscript>JavaScript is required for this application. Please enable JavaScript in your browser.</noscript><div id="root"></div></body></html>
