translation to english

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Text Cluster Comparison</title>
   <link rel="icon" href="favicon.ico" />
-  <!-- Fügen wir ein einfaches Reset-CSS und einige Basisstile hinzu -->
+  <!-- Let's add a simple reset CSS and some basic styles -->
   <style>
     * {
       box-sizing: border-box;
@@ -22,9 +22,9 @@
 </head>
 <body>
   <noscript>
-    JavaScript ist für diese Anwendung erforderlich. Bitte aktiviere JavaScript in deinem Browser.
+    JavaScript is required for this application. Please enable JavaScript in your browser.
   </noscript>
-  <!-- Diese div mit der ID "root" ist der Container, in dem unsere React-App gerendert wird -->
+  <!-- This div with the ID "root" is the container where our React app will be rendered -->
   <div id="root"></div>
 </body>
 </html>
